--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -69,6 +69,7 @@
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
     "fast-deep-equal": "^3.1.3",
+    "focus-lock": "^1.3.5",
     "fontfaceobserver": "^2.3.0",
     "framer-motion": "^10.16.0",
     "html2canvas": "^1.4.1",
