--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -68,6 +68,7 @@
     "compare-versions": "^6.1.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
+    "dotenv": "^16.4.5",
     "fast-deep-equal": "^3.1.3",
     "focus-lock": "^1.3.5",
     "fontfaceobserver": "^2.3.0",
