--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -139,7 +139,7 @@ jobs:
             sudo docker cp /home/bitnami/autoptimize-unusedcss/autoptimize-unusedcss ${WP_CONTAINER}:/bitnami/wordpress/wp-content/plugins
             if [ $? -eq 0 ]; then
               echo "Plugin autoptimize-unusedcss copied successfully to ${WP_CONTAINER}"
-              sudo docker exec -i ${WP_CONTAINER} sh -c "wp plugin activate unusedcss --allow-root"
+              #sudo docker exec -i ${WP_CONTAINER} sh -c "wp plugin activate unusedcss --allow-root"
             else
               echo "Failed to copy plugin autoptimize-unusedcss to ${WP_CONTAINER}"
             fi
