--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -139,13 +139,28 @@ jobs:
             sudo docker cp /home/bitnami/autoptimize-unusedcss/autoptimize-unusedcss ${WP_CONTAINER}:/bitnami/wordpress/wp-content/plugins/unusedcss
             if [ $? -eq 0 ]; then
               echo "Plugin autoptimize-unusedcss copied successfully to ${WP_CONTAINER}"
-              sudo docker exec -i ${WP_CONTAINER} sh -c "wp plugin activate unusedcss --allow-root"
             else
               echo "Failed to copy plugin autoptimize-unusedcss to ${WP_CONTAINER}"
             fi
             sleep 30 # wait for the file copy
             sudo docker exec -i ${WP_CONTAINER} sh -c "ls /bitnami/wordpress/wp-content/plugins"
+          EOF
 
+      - name: Activate Plugin in Docker Container
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << 'EOF'
+            INSTANCE_ID=${{ github.event.number }}
+            WP_CONTAINER=$(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
+            if [ -n "${WP_CONTAINER}" ]; then
+              sudo docker exec -i ${WP_CONTAINER} sh -c "wp plugin activate unusedcss --allow-root"
+              if [ $? -eq 0 ]; then
+                echo "Plugin unusedcss activated successfully in ${WP_CONTAINER}"
+              else
+                echo "Failed to activate plugin unusedcss in ${WP_CONTAINER}"
+              fi
+            else
+              echo "No container found with name wordpress_${INSTANCE_ID}"
+            fi
           EOF
 
       - name: Clean up old Docker containers and volumes
