--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -40,7 +40,6 @@ jobs:
           sed -i "s/\${INSTANCE_ID}/${INSTANCE_ID}/g" docker-compose.yml
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} "mkdir -p wp-${INSTANCE_ID}"
           scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa docker-compose.yml bitnami@${{ secrets.SSH_HOST }}:/home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml
-          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa Dockerfile.wordpress bitnami@${{ secrets.SSH_HOST }}:/home/bitnami/wp-${INSTANCE_ID}/Dockerfile.wordpress
 
       - name: Create dynamic Nginx config
         #if: ${{ github.event.action == 'opened' }}
@@ -92,10 +91,6 @@ jobs:
               "proxied": true
             }'
 
-      - name: Clone WordPress Plugin Repository
-        run: |
-          git clone -b ${{ github.head_ref }} --single-branch https://github.com/shakee93/autoptimize-unusedcss.git ./autoptimize-unusedcss
-
       - name: Deploy WordPress
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << 'EOF'
@@ -116,7 +111,7 @@ jobs:
             #sudo docker volume rm -f $(sudo docker volume ls -q --filter name=wordpress_data_${INSTANCE_ID})
             #sudo docker volume rm -f $(sudo docker volume ls -q --filter name=mariadb_data_${INSTANCE_ID})
 
-            sudo docker-compose -f /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml up -d --build
+            sudo docker-compose -f /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml up -d
             sleep 30 # wait for the services to start
             sudo docker-compose -f /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml logs wordpress
           EOF
@@ -125,7 +120,16 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} 'sudo /opt/bitnami/ctlscript.sh restart nginx'
 
-      - name: Clone Plugin from Git Repository into Docker Container
+      - name: Clone WordPress Plugin Repository
+        run: |
+          git clone -b ${{ github.head_ref }} --single-branch https://github.com/shakee93/autoptimize-unusedcss.git ./autoptimize-unusedcss
+          zip -r autoptimize-unusedcss.zip ./autoptimize-unusedcss
+
+      - name: Copy Plugin Zip to Remote Instance
+        run: |
+          scp -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ./autoptimize-unusedcss.zip bitnami@${{ secrets.SSH_HOST }}:/home/bitnami/autoptimize-unusedcss.zip
+
+      - name: Copy and Unzip Plugin in Docker Container
         run: |
           ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << 'EOF'
             INSTANCE_ID=${{ github.event.number }}
@@ -136,11 +140,17 @@ jobs:
             sudo docker volume ls
             WP_CONTAINER=$(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
             echo "Container ID: ${WP_CONTAINER}"
-            sudo docker exec -i ${WP_CONTAINER} sh -c "git clone -b ${{ github.head_ref }} --single-branch https://github.com/shakee93/autoptimize-unusedcss.git /bitnami/wordpress/wp-content/plugins/unusedcss"
+            sudo docker cp /home/bitnami/autoptimize-unusedcss.zip ${WP_CONTAINER}:/bitnami/wordpress/wp-content/plugins/unusedcss.zip
             if [ $? -eq 0 ]; then
-              echo "Plugin autoptimize-unusedcss cloned successfully to ${WP_CONTAINER}"
+              echo "Plugin zip autoptimize-unusedcss.zip copied successfully to ${WP_CONTAINER}"
+              sudo docker exec -i ${WP_CONTAINER} sh -c "unzip -o /bitnami/wordpress/wp-content/plugins/unusedcss.zip -d /bitnami/wordpress/wp-content/plugins/ && rm /bitnami/wordpress/wp-content/plugins/unusedcss.zip"
+              if [ $? -eq 0 ]; then
+                echo "Plugin autoptimize-unusedcss unzipped successfully in ${WP_CONTAINER}"
+              else
+                echo "Failed to unzip plugin autoptimize-unusedcss in ${WP_CONTAINER}"
+              fi
             else
-              echo "Failed to clone plugin autoptimize-unusedcss to ${WP_CONTAINER}"
+              echo "Failed to copy plugin zip autoptimize-unusedcss.zip to ${WP_CONTAINER}"
             fi
             sudo docker exec -i ${WP_CONTAINER} sh -c "ls /bitnami/wordpress/wp-content/plugins"
           EOF
