--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -171,7 +171,7 @@ jobs:
             INSTANCE_ID=${{ github.event.number }}
             WP_CONTAINER=$(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
             if [ -n "${WP_CONTAINER}" ]; then
-              sudo docker exec -i ${WP_CONTAINER} sh -c "wp plugin activate unusedcss --allow-root"
+              sudo docker exec -i ${WP_CONTAINER} sh -c "wp plugin activate autoptimize-unusedcss --allow-root"
               if [ $? -eq 0 ]; then
                 echo "Plugin unusedcss activated successfully in ${WP_CONTAINER}"
               else
