update yml file with rapidload cli commands

--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -172,6 +172,8 @@ jobs:
             WP_CONTAINER=$(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
             if [ -n "${WP_CONTAINER}" ]; then
               sudo docker exec -i ${WP_CONTAINER} sh -c "wp plugin activate autoptimize-unusedcss --allow-root"
+              sudo docker exec -i ${WP_CONTAINER} sh -c "wp rapidload update_db"
+              sudo docker exec -i ${WP_CONTAINER} sh -c "wp rapidload connect_license ${{ secrets.RAPIDLOAD_LISENCE_KEY }}"
               if [ $? -eq 0 ]; then
                 echo "Plugin unusedcss activated successfully in ${WP_CONTAINER}"
               else
