uncomment if condition for Update wp-config.php in Docker container

--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -125,7 +125,7 @@ jobs:
           EOF
 
       - name: Update wp-config.php in Docker container
-        if: ${{ github.event.action == 'opened' }}
+        #if: ${{ github.event.action == 'opened' }}
         run: |
           INSTANCE_ID=${{ github.event.number }}
           DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
