--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -129,9 +129,9 @@ jobs:
         run: |
           INSTANCE_ID=${{ github.event.number }}
           DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
-          CONTAINER_ID=$(docker ps -qf "name=your_container_name")  # Replace 'your_container_name' with the actual name or ID of the container
+          WP_CONTAINER=$(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
 
-          docker exec -u root -i $CONTAINER_ID sh -c "sed -i 's/127.0.0.1/${DOMAIN}/g' /bitnami/wordpress/wp-config.php"
+          docker exec -u root -i ${WP_CONTAINER} sh -c "sed -i 's/127.0.0.1/${DOMAIN}/g' /bitnami/wordpress/wp-config.php"
 
       - name: Restart Nginx
         if: ${{ github.event.action == 'opened' }}
