--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -103,7 +103,7 @@ jobs:
             }'
 
       - name: Deploy WordPress
-        if: ${{ github.event.action == 'opened' }}
+        #if: ${{ github.event.action == 'opened' }}
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << 'EOF'
             INSTANCE_ID=${{ github.event.number }}
@@ -120,8 +120,8 @@ jobs:
             #sudo fuser -k ${WORDPRESS_PORT}/tcp
 
             # Remove existing volumes
-            #sudo docker volume rm -f $(sudo docker volume ls -q --filter name=wordpress_data_${INSTANCE_ID})
-            #sudo docker volume rm -f $(sudo docker volume ls -q --filter name=mariadb_data_${INSTANCE_ID})
+            sudo docker volume rm -f $(sudo docker volume ls -q --filter name=wordpress_data_${INSTANCE_ID})
+            sudo docker volume rm -f $(sudo docker volume ls -q --filter name=mariadb_data_${INSTANCE_ID})
 
             sudo docker-compose -f /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml up -d
             sleep 30 # wait for the services to start
