--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -135,8 +135,16 @@ jobs:
               sudo docker rm ${DB_CONTAINER}
             fi
 
-            sudo docker volume rm -f $(sudo docker volume ls -q --filter name=wordpress_data_${INSTANCE_ID})
-            sudo docker volume rm -f $(sudo docker volume ls -q --filter name=mariadb_data_${INSTANCE_ID})
+            # Remove existing volumes
+            WP_VOLUME=$(sudo docker volume ls -q --filter name=wordpress_data_${INSTANCE_ID})
+            if [ ! -z "$WP_VOLUME" ]; then
+              sudo docker volume rm -f ${WP_VOLUME}
+            fi
+
+            DB_VOLUME=$(sudo docker volume ls -q --filter name=mariadb_data_${INSTANCE_ID})
+            if [ ! -z "$DB_VOLUME" ]; then
+              sudo docker volume rm -f ${DB_VOLUME}
+            fi
 
             sudo docker-compose -f /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml up -d
             sleep 30 # wait for the services to start
