update Create dynamic docker-compose file step

--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -30,20 +30,25 @@ jobs:
           echo "WORDPRESS_PORT=$((3000 + ${{ github.event.number }}))" >> $GITHUB_ENV
 
       - name: Create dynamic docker-compose file
-        #if: ${{ github.event.action == 'opened' }}
         run: |
           INSTANCE_ID=${{ github.event.number }}
           WORDPRESS_PORT=$((3000 + INSTANCE_ID))
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
+          WP_USERNAME=${{ secrets.WP_USERNAME }}
+          WP_PASSWORD=${{ secrets.WP_PASSWORD }}
+
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} <<EOF
             INSTANCE_ID=${INSTANCE_ID}
             WORDPRESS_PORT=${WORDPRESS_PORT}
-            WP_USERNAME=${{ secrets.WP_USERNAME }}
-            WP_PASSWORD=${{ secrets.WP_PASSWORD }}
+            WP_USERNAME=${WP_USERNAME}
+            WP_PASSWORD=${WP_PASSWORD}
+
             # Create instance directory
             mkdir -p /home/bitnami/wp-${INSTANCE_ID}
+
             # Copy the template to the instance directory
             cp /home/bitnami/docker-compose-template.yml /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml
             cd /home/bitnami/wp-${INSTANCE_ID} && ls
+
             # Modify the copied template file
             sed -i "s/wordpress_data:/wordpress_data_${INSTANCE_ID}:/g" /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml
             sed -i "s/mariadb_data:/mariadb_data_${INSTANCE_ID}:/g" /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml
@@ -51,7 +56,7 @@ jobs:
             sed -i "s/\${INSTANCE_ID}/${INSTANCE_ID}/g" /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml
             sed -i "s/\${WP_USERNAME}/${WP_USERNAME}/g" /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml
             sed -i "s/\${WP_PASSWORD}/${WP_PASSWORD}/g" /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml
-          EOF
+      EOF
 
       - name: Create dynamic Nginx config
         if: ${{ github.event.action == 'opened' }}
