--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -112,54 +112,45 @@ jobs:
             }'
 
       - name: Deploy WordPress
-        #if: ${{ github.event.action == 'opened' }}
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
             INSTANCE_ID=${{ github.event.number }}
             WORDPRESS_PORT=$((3000 + INSTANCE_ID))
             export INSTANCE_ID WORDPRESS_PORT
-            WP_CONTAINER=$(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
-            DB_CONTAINER=$(sudo docker ps -q --filter "name=mariadb_${INSTANCE_ID}")
 
-            echo "WP_CONTAINER ID: ${WP_CONTAINER}"
-            echo "DB_CONTAINER ID: ${DB_CONTAINER}"
+            # Get the container IDs
+            WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
+            DB_CONTAINER=\$(sudo docker ps -q --filter "name=mariadb_\${INSTANCE_ID}")
 
-            # Stop and remove any existing Docker services using the same ports
-            sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}" | grep -q . && sudo docker stop $(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
-            sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}" | grep -q . && sudo docker rm $(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
-            sudo docker ps -q --filter "name=nginx_${INSTANCE_ID}" | grep -q . && sudo docker stop $(sudo docker ps -q --filter "name=nginx_${INSTANCE_ID}")
-            sudo docker ps -q --filter "name=nginx_${INSTANCE_ID}" | grep -q . && sudo docker rm $(sudo docker ps -q --filter "name=nginx_${INSTANCE_ID}")
-
-            # Find and kill any process using the desired port
-            #sudo fuser -k ${WORDPRESS_PORT}/tcp
-
-            # Remove existing volumes
+            echo "WP_CONTAINER ID: \${WP_CONTAINER}"
+            echo "DB_CONTAINER ID: \${DB_CONTAINER}"
 
             # Stop and remove any existing Docker services using the same ports
-            if [ ! -z "$WP_CONTAINER" ]; then
-              sudo docker stop ${WP_CONTAINER}
-              sudo docker rm ${WP_CONTAINER}
+            if [ ! -z "\$WP_CONTAINER" ]; then
+              sudo docker stop \${WP_CONTAINER}
+              sudo docker rm \${WP_CONTAINER}
             fi
 
-            if [ ! -z "$DB_CONTAINER" ]; then
-              sudo docker stop ${DB_CONTAINER}
-              sudo docker rm ${DB_CONTAINER}
+            if [ ! -z "\$DB_CONTAINER" ]; then
+              sudo docker stop \${DB_CONTAINER}
+              sudo docker rm \${DB_CONTAINER}
             fi
 
             # Remove existing volumes
-            WP_VOLUME=$(sudo docker volume ls -q --filter name=wordpress_data_${INSTANCE_ID})
-            if [ ! -z "$WP_VOLUME" ]; then
-              sudo docker volume rm -f ${WP_VOLUME}
+            WP_VOLUME=\$(sudo docker volume ls -q --filter name=wordpress_data_\${INSTANCE_ID})
+            if [ ! -z "\$WP_VOLUME" ]; then
+              sudo docker volume rm -f \${WP_VOLUME}
             fi
 
-            DB_VOLUME=$(sudo docker volume ls -q --filter name=mariadb_data_${INSTANCE_ID})
-            if [ ! -z "$DB_VOLUME" ]; then
-              sudo docker volume rm -f ${DB_VOLUME}
+            DB_VOLUME=\$(sudo docker volume ls -q --filter name=mariadb_data_\${INSTANCE_ID})
+            if [ ! -z "\$DB_VOLUME" ]; then
+              sudo docker volume rm -f \${DB_VOLUME}
             fi
 
-            sudo docker-compose -f /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml up -d
+            # Start the new services
+            sudo docker-compose -f /home/bitnami/wp-\${INSTANCE_ID}/docker-compose.yml up -d
             sleep 30 # wait for the services to start
-            sudo docker-compose -f /home/bitnami/wp-${INSTANCE_ID}/docker-compose.yml logs wordpress
+            sudo docker-compose -f /home/bitnami/wp-\${INSTANCE_ID}/docker-compose.yml logs wordpress
           EOF
 
       - name: Update wp-config.php in Docker container
